add trim function to trim strings from user post requests
