# swagger.json
@@ -2,14 +2,14 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "EPIC MAIL",
-    "description": "EPIC Mail helps people exchange messages/information over the internet. The app is hosted on GitHub at [https://github.com/placideirandora/epic-mail](https://github.com/placideirandora/epic-mail)"
+    "title": "AutoMart",
+    "description": "Auto Mart is an online marketplace for automobiles of diverse makes, model or body type. With Auto Mart, users can sell their cars or buy from trusted dealerships or private sellers"
   },
   "contact": {
-    "email": "placideirandora@gmail.com"
+    "email": "didasmbalanya2@yahoo.com"
   },
-  "host": "epic-mail-ch3.herokuapp.com",
-  "basePath": "/api/v2",
+  "host": "stark-anchorage-85191.herokuapp.com",
+  "basePath": "/api/v1",
   "schemes": [
     "https",
     "http"
@@ -1123,10 +1123,11 @@
   "definitions": {
     "User": {
       "required": [
-        "firstname",
-        "lastname",
-        "username",
-        "password"
+        "first_name",
+        "last_name",
+        "email",
+        "password",
+        "confirm_password"
       ],
       "properties": {
         "firstname": {
@@ -1135,11 +1136,14 @@
         "lastname": {
           "type": "string"
         },
-        "username": {
+        "email": {
           "type": "string",
           "uniqueItems": true
         },
         "password": {
+          "type": "string"
+        },
+        "confirm password": {
           "type": "string"
         }
       }
@@ -1158,7 +1162,7 @@
         }
       }
     },
-    "Email": {
+    "Car": {
       "required": [
         "email"
       ],
